[tool.poetry]
name = "xontrib-gruvbox"
version = "0.1.1"
description = "A Gruvbox theme for xonsh."
authors = ["Ryan Delaney <ryan.patrick.delaney@protonmail.com>"]
readme = "README.rst"
license = "MIT"
packages = [
  { include = "xontrib" }
]

[tool.poetry.dependencies]
python = ">=3.6"
xonsh = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
